cmake_minimum_required(VERSION 3.13)

include(pico_sdk_import.cmake)

project(hw18_as5600_read C CXX ASM)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)

pico_sdk_init()

add_executable(hw18_as5600_read
    main.c
)

target_link_libraries(hw18_as5600_read
    pico_stdlib
    hardware_i2c
)

pico_enable_stdio_usb(hw18_as5600_read 1)
pico_enable_stdio_uart(hw18_as5600_read 0)

pico_add_extra_outputs(hw18_as5600_read)

